# grafika-opengl-shader

Dragons/: CMakeLists.txt  background_gradients.cpp  data.txt  main.cpp
Dragons/shader/: shaderHelper.h
Gradient_Pentagon/: CMakeLists.txt  main.cpp
